# taskmanager

./: .coverage  .slurmparams  __init__.py  __main__.py  batch.py  config.py  equilibration_generator.py  interactive.py  job_parser.py  production_chunker.py  pyproject.toml  run_tests.sh  script_generator.py  taskmanager.sh  utils.py
src/taskmanager/: __init__.py  __main__.py  batch.py  config.py  interactive.py  job_parser.py  production_chunker.py  script_generator.py  utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_batch.py  test_config.py  test_equilibration_generator.py  test_integration.py  test_interactive.py  test_job_parser.py  test_production_chunker.py  test_script_generator.py  test_utils.py
